--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,6 +1,8 @@
 $primary: #FFFFFF;
-$secondary: #F9F6F7;
+$secondary: #f9f8f6;
 $tertiary: #FFE8D6;
-$quaternary: #FF971D;
+$quaternary: #a56d2c;
 
 $shadowBorder: #e0e0e0;
+$shadowBorderDarker: #cccccc;
+$textColor: #5f5f5f;
