--- a/src/components/Intro/Intro.module.scss
+++ b/src/components/Intro/Intro.module.scss
@@ -1,32 +1,159 @@
 @import '../../sass/global_imports.scss';
 
 .intro {
-  padding-top: 100px;
+  padding: 100px 0 150px;
   background-color: $secondary;
 
-  .introWrapper{
+  .introWrapper {
     display: flex;
     flex-direction: column;
 
-    .info{
+    .info {
       display: flex;
       justify-content: space-between;
+      align-items: center;
+      margin: 70px 0;
+      gap: 50px;
 
-      .content{
+      @include Responsive(smartphone-landscape) {
+        flex-direction: column;
+      }
 
-        .jobPosition{
+      .content {
+        display: flex;
+        flex-direction: column;
+        width: 550px;
+        gap: 30px;
 
+        @include Responsive(smartphone-landscape) {
+          align-items: center;
+          width: 100%;
+          text-align: center;
         }
-        .firstText{
 
+        .jobPosition {
+          font-size: 3rem;
+          font-weight: bold;
+          color: $quaternary;
+          width: fit-content;
+
+          @include Responsive(smartphone-portrait){
+            font-size: 2.5rem;
+          }
+
+          img {
+            width: 40px;
+            margin-bottom: -5px;
+            margin-left: 10px;
+          }
+        }
+        .firstText {
+          color: $textColor;
+          font-size: 1.2rem;
+        }
+        .links {
+          display: flex;
+          gap: 10px;
+          font-size: 1.5rem;
         }
       }
-      .avatar{
 
+      .mask {
+        --uiMaskClipPath: var(--maskClipPath);
+        width: 300px;
+        height: 300px;
+        display: flex;
+        justify-content: center;
+        padding: 5px;
+        clip-path: var(--uiMaskClipPath);
+        background-color: $textColor;
+
+        @include Responsive(smartphone-landscape){
+          width: 250px;
+          height: 250px;
+        }
+
+        &.mask_type1 {
+          --maskClipPath: polygon(
+            0 10%,
+            10% 0,
+            90% 0,
+            100% 10%,
+            100% 90%,
+            90% 100%,
+            10% 100%,
+            0 90%
+          );
+
+          &:hover,
+          &:focus {
+            --maskClipPath: polygon(
+              0 0,
+              100% 0,
+              100% 10%,
+              100% 100%,
+              90% 100%,
+              0% 100%,
+              0% 90%,
+              0% 10%
+            );
+          }
+        }
+        &.mask_type1_a1 {
+          --maskAnimationDuration: 0.4s;
+        }
+
+        .mask__img {
+          width: 100%;
+          display: block;
+          clip-path: var(--uiMaskClipPath);
+
+          img {
+            transform: scale(3);
+          }
+        }
+      }
+      .mask,
+      .mask__img {
+        transition: clip-path var(--maskAnimationDuration, 0.2s)
+          var(--maskAnimationTimingFunction, ease-out);
       }
     }
-    .techs{
+    .techLabel {
+      text-align: center;
+      font-size: 1.5rem;
+      font-weight: 500;
+      margin-bottom: 20px;
+    }
+    .techs {
+      display: flex;
+      justify-content: space-between;
+      border-top: solid $quaternary;
+      border-bottom: solid $quaternary;
+      border-width: 2px;
+      padding: 30px 5px;
+      gap: 20px;
 
+      @include Responsive(tablet) {
+        justify-content: space-around;
+        flex-wrap: wrap;
+      }
+
+      .techItem {
+        position: relative;
+        width: 70px;
+        height: 70px;
+        background-color: $primary;
+        box-shadow: 0 0 10px $shadowBorder;
+        border-radius: 50%;
+        padding: 13px;
+        transition: all 0.1s linear;
+
+        &:hover {
+          transform: scale(1.05);
+          box-shadow: 0 0 10px $shadowBorderDarker;
+        }
+      }
     }
   }
 }
