--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -10,7 +10,7 @@ body {
   font-family: 'Roboto', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   scroll-behavior: smooth;
-  line-height: 1.5rem;
+  // line-height: 1.5rem;
 }
 
 a {
@@ -28,9 +28,16 @@ button:focus-visible {
   outline: none;
 }
 
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .container{
   width: calc(100% - 30px);
-  max-width: 900px;
+  max-width: 1100px;
+  padding: 0 70px;
   margin-left: auto;
   margin-right: auto;
   position: relative;
