--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -10,7 +10,24 @@ body {
   font-family: 'Roboto', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   scroll-behavior: smooth;
+  overflow: overlay;
   // line-height: 1.5rem;
+
+  &::-webkit-scrollbar {
+    width: 12px;
+    background-color: transparent;
+  }
+  
+  *::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+  
+  &::-webkit-scrollbar-thumb {
+    background-color: $quaternary;
+    border-radius: 5px;
+    border: 3px solid transparent;
+    background-clip: content-box;
+  }
 }
 
 a {
@@ -36,10 +53,15 @@ img {
 
 .container{
   width: calc(100% - 30px);
-  max-width: 1100px;
-  padding: 0 70px;
+  max-width: 1000px;
+  padding-left: 70px !important;
+  padding-right: 70px !important;
   margin-left: auto;
   margin-right: auto;
   position: relative;
   overflow: hidden;
+}
+
+.section {
+  padding: 150px 0;
 }
