--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -114,6 +114,7 @@
       .description {
         color: $textColor;
         line-height: 1.5rem;
+        text-align: justify;
       }
     }
   }
