--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -11,6 +11,8 @@ body {
   font-size: 16px;
   scroll-behavior: smooth;
   overflow: overlay;
+  letter-spacing: 0.5px;
+
   // line-height: 1.5rem;
 
   &::-webkit-scrollbar {
