--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -54,15 +54,17 @@ img {
 }
 
 .container{
-  width: calc(100% - 30px);
-  max-width: 1000px;
-  padding-left: 70px !important;
-  padding-right: 70px !important;
+  width: 100%;
+  max-width: 950px;
   margin-left: auto;
   margin-right: auto;
   position: relative;
   overflow: hidden;
 
+  @include Responsive(tablet){
+    padding-left: 70px !important;
+    padding-right: 70px !important;
+  }
   @include Responsive(smartphone-portrait){
     padding-left: 40px !important;
     padding-right: 40px !important;
