add projects section

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,8 +1,9 @@
 $primary: #FFFFFF;
 $secondary: #f9f8f6;
-$tertiary: #FFE8D6;
+$tertiary: #ff9848;
 $quaternary: #a56d2c;
 
 $shadowBorder: #e0e0e0;
 $shadowBorderDarker: #cccccc;
 $textColor: #5f5f5f;
+$textColor2: #cfcfcf;
