--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -94,7 +94,7 @@
 
       .label {
         color: $quaternary;
-        font-size: 1.25rem;
+        font-size: 1.5rem;
         font-weight: bold;
       }
       .title {
@@ -107,7 +107,7 @@
         }
 
         svg {
-          color: $quaternary;
+          color: green;
           margin-bottom: -5px;
         }
       }
