--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -85,9 +85,9 @@
   gap: 50px;
   align-items: center;
   justify-content: space-between;
-  height: 100vh;
+  height: 100%;
   width: 100%;
-  padding: 100px 0px 70px;
+  padding: 10vh 0px 7vh;
   background-color: $primary;
   box-shadow: 1px 0 10px $shadowBorder;
   transform: translateX(100%);
@@ -122,7 +122,7 @@
       font-weight: bold;
       width: 100%;
       text-align: center;
-      padding: 50px 0;
+      padding: 5vh 0;
       font-size: 1.5rem;
       transition: all 0.1s linear;
 
