--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -1,9 +1,35 @@
 @import '../../sass/global_imports.scss';
 
-.projects{
+.projects {
   background-color: $secondary;
 
-  .projectsWrapper{
+  .projectsWrapper {
 
+    @include Responsive(smartphone-landscape){
+      text-align: center;
+    }
+
+    .title{
+      font-size: 1.5rem;
+      font-weight: bold;
+      margin-bottom: 20px;
+      color: $quaternary;
+    }
+    .description{
+      font-size: 1.75rem;
+      font-weight: bold;
+      margin-bottom: 50px;
+
+      svg{
+        margin-bottom: -5px;
+        font-size: 2rem;
+        color: blue;
+      }
+    }
+    .projectCards{
+      display: flex;
+      flex-direction: column;
+      gap: 50px;
+    }
   }
 }
