--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -85,7 +85,7 @@
   gap: 50px;
   align-items: center;
   justify-content: space-between;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   padding: 10vh 0px 7vh;
   background-color: $primary;
