add cv download and more project

--- a/src/components/Intro/Intro.module.scss
+++ b/src/components/Intro/Intro.module.scss
@@ -51,6 +51,10 @@
           font-size: 1.2rem;
           line-height: 1.7rem;
         }
+        .cvLink{
+          text-decoration: underline;
+          font-style: italic;
+        }
         .links {
           display: flex;
           gap: 10px;
