--- a/src/components/Projects/ProjectCard/ProjectCard.module.scss
+++ b/src/components/Projects/ProjectCard/ProjectCard.module.scss
@@ -5,11 +5,12 @@
   height: 500px;
   overflow: hidden;
   border-radius: 10px;
-  box-shadow: 0 5px 10px rgba(gray, 0.2);
+  box-shadow: 0 4px 10px rgba(gray, 0.5);
+  border: 2px solid $quaternary;
 
   .projectImg {
-    width: 100%;
-    flex-shrink: 0;
+    display: inline-block;
+    width: 100.5%;
 
     img {
       height: auto;
@@ -110,7 +111,7 @@
     }
     .projectLinks {
       display: flex;
-      gap: 10px;
+      gap: 20px;
       margin-bottom: 10px;
 
       .projectLink {
@@ -120,6 +121,10 @@
 
         @include Responsive(smartphone-portrait) {
           font-size: 1rem;
+        }
+
+        svg{
+          margin-bottom: -2px;
         }
       }
     }
