--- a/src/components/Projects/ProjectCard/ProjectCard.module.scss
+++ b/src/components/Projects/ProjectCard/ProjectCard.module.scss
@@ -99,6 +99,8 @@
     .projectTechs {
       display: flex;
       gap: 10px;
+      flex-wrap: wrap;
+      justify-content: center;
       margin-bottom: 20px;
 
       .projectTech {
@@ -112,7 +114,7 @@
     .projectLinks {
       display: flex;
       gap: 20px;
-      margin-bottom: 10px;
+      margin-bottom: 20px;
 
       .projectLink {
         color: $textColor2;
